tests/compile_fail/invalid_lit_byte_str_with_null_bytes.rs
use better_cstr::c;

fn main() {
    c!(b"This byte string contains a null byte \0!");
}
